making sure things are up to date

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,31 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>Jen - Portfolio</title>
+    <title>Jenmitz - Portfolio</title>
 </head>
 
 <body>
 
-    <div id=header>
+    <div id="header">
         <h1>Jennifer Mitzman</h1>
-        <div>
             <ul id="links">
                 <li id="contact"><a href="contact.html" target="_blank" >Contact</a></li>
                 <li id="portfolio"><a href="portfolio.html" target="_blank" >Portfolio</a></li>
                 <li id="about"><a href="index.html" target="_blank" >About</a></li>
             </ul>
-        </div>
+        </nav>
     </div>
 
     <div class="content">
         <h1 class="title">Portfolio</h1>
         <hr>
         <div id="images">
+            <div id="imageText">Packing List</div>
+            <div id="countdown">Countdown</div>
+            <div id="snake">Snake Game</div>
+            <div id="bucketlist">Bucketlist</div>
+            <div id="succulents">Succulent Reference</div>
             <table>
                 <tbody>
                     <tr>
                         <td><a href="#"> 
-                                <img class="portfolioImage" src="assets/images/stil-TVllFyGaLEA-unsplash.jpg" alt="packing luggage"> <!--luggage Photo by STIL on Unsplash-->
+                            <img class="portfolioImage" src="assets/images/stil-TVllFyGaLEA-unsplash.jpg" alt="packing luggage"> <!--luggage Photo by STIL on Unsplash--> 
                             </a>
                         </td>
                         <td>
@@ -63,7 +67,6 @@
         </div>
     </div>
 
-    <footer id="blueBar"></footer>
     <footer>
         <p>Copyright &copy; Jennifer Mitzman</p>
     </footer>
