--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body> 
     <div id="header"> 
         <h1>Jennifer Mitzman</h1>
-        <div>
-            <ul id="links">
+        <div id="links">
+            <ul>
                 <li><a href="contact.html" target="_blank">Contact</a></li>
                 <li><a href="portfolio.html" target="_blank">Portfolio</a></li>
                 <li><a href="index.html" target="_blank">About</a></li>
@@ -27,11 +27,26 @@
             <hr>
             <img src="assets/images/IMG_2446_1_25smaller.png" alt="Picture of Jennifer Mitzman" id="jenniferMitzman">
             <p id="bioText">
-                Hello! This is my first website, and I made it with love, frustration, effort, and some third-party type of magic. It had to be magic. I don't even know why all of this works. I'm a beginner, okay?<br><br>I've just started my coding journey from my residence in Sacramento, CA. When I'm not coding, I'm likely playing video games and/or spending time with my fiance. I have a three-legged dog named Lincoln, have played over 10 musical instruments, and have ridden two camels.<br><br>Feel free to follow me on my learning journey here, though I'm not sure I'd recommend it! (Hey, by the way, those links up top? They work!!) 
+                Hello! I'm an upcoming web developer out of Sacramento, and this is my first website. 
+                It was made with frustration, time, and gusto... and perhaps even magic, because 
+                even I don't even know why/how some of this works. I am just starting, so don't hold it against me.
+                <br><br>
+                (Disclaimer: I don't practice magic.)
+                <br><br>
+                When I'm not coding,
+                you'll likely find me playing an excessive amount of video games, playing board games, or spending time with friends - sometimes all at once.
+                 Fun facts: 
+                I play/have played over 10 musical instruments, have an unhealthy obsession with sloths, and have ridden two camels.
+                <br><br>
+                Feel free to follow me on Twitter @jenmitz or connect with me on LinkedIn. (Hey, by the way, those links up top? They work!! 
+                (It's pretty exciting if you ask me.) 
+                <br><br>
+                <em><strong>[note: this is not intended to be a serious & professional bio. it's more for 
+                fun, but i'll make an actual bio soon.]</strong></em>
             </p>
         </div>
     </div>
-    <footer id="blueBar"></footer>
+
     <footer>
         <p>Copyright &copy; Jennifer Mitzman</p>
     </footer>
